[package]
name = "weather_crawl"
version = "0.2.2"
authors = ["Kim Jinsu <item4@localhost>"]
edition = "2021"

[dependencies]
rust_decimal = { version = "^1.35.0", features = ["serde-float"] }
tokio = { version = "^1.37.0", features = ["full"] }
reqwest = "^0.12.4"
env_logger = "^0.11.3"
encoding = "^0.2.33"
scraper = "^0.19.0"
ego-tree = "^0.6.2"
regex = "^1.10.4"
serde = { version = "1.0.198", features = ["derive"] }
serde_json = "^1.0.116"
clap = { version = "^4.5.4", features = ["cargo"] }
