[package]
name = "weather_crawl"
version = "0.2.3"
authors = ["Kim Jinsu <item4@localhost>"]
edition = "2021"

[dependencies]
clap = { version = "^4.5.34", features = ["cargo"] }
ego-tree = "^0.10.0"
encoding = "^0.2.33"
env_logger = "^0.11.7"
regex = "^1.11.1"
reqwest = "^0.12.15"
rust_decimal = { version = "^1.37.1", features = ["serde-float"] }
scraper = "^0.23.1"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "^1.0.140"
tokio = { version = "^1.44.1", features = ["full"] }
